--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "ts-2-oas-ui",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "./dist/index.html",
   "scripts": {
     "test": "jest",
     "build": "webpack --config webpack.config.prod.js",
-    "serve": "webpack serve --config webpack.config.prod.js",
-    "start": "webpack-dev-server --config webpack.config.dev.js --open --hot"
+    "start": "webpack serve --config webpack.config.prod.js",
+    "dev": "webpack-dev-server --config webpack.config.dev.js --open --hot"
   },
   "author": "",
   "license": "ISC",
