--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "build": "webpack --config webpack.config.prod.js",
-    "start": "webpack serve --config webpack.config.prod.js",
+    "start": "node server.js",
     "dev": "webpack-dev-server --config webpack.config.dev.js --open --hot"
   },
   "author": "",
