--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "test": "jest",
     "build": "webpack --config webpack.config.prod.js",
-    "serve": "webpack serve --config webpack.config.prod.js",
-    "start": "webpack-dev-server --config webpack.config.dev.js --open --hot"
+    "start": "node server.js",
+    "dev": "webpack-dev-server --config webpack.config.dev.js --open --hot"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.2",
     "babel-polyfill": "^6.26.0",
+    "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
